--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@storybook/react-webpack5": "^7.6.12",
     "@storybook/test": "^7.6.12",
     "eslint-plugin-storybook": "^0.6.15",
+    "node-sass": "^9.0.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.12",
     "webpack": "^5.90.1"
